# ham

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  __init__.py  bench.py  cli.py  deploy-cron-script.sh  extract.py  plugin.yaml  pyproject.toml  store.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INSTALL.md  MIGRATIONS.md  PRIVACY.md  USAGE.md
examples/: basic_usage.py  local_only.py
ham/: __init__.py  cli.py  indexer.py  memory_engine.py  session_hook.py
scripts/: indexer.py  memory_engine.py  session_hook.py
tests/: conftest.py  test_cli.py  test_engine.py  test_extra.py  test_ham_v2.py  test_release_1_0.py
