[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ham-memory"
version = "1.0.0"
description = "HAM 🍖 — Hermes Advanced Memory. Local-first, multi-store hybrid memory for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "eventh0riz0n"},
]
keywords = ["memory", "ai", "agent", "sqlite", "vector", "bm25", "embeddings"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
local = ["fastembed>=0.3"]      # local CPU fallback embeddings
openrouter = ["openai>=1.0"]    # OpenRouter/OpenAI-compatible embedding fallback
dev = ["pytest>=7.0", "black", "ruff"]
all = ["fastembed>=0.3", "openai>=1.0", "pytest>=7.0", "black", "ruff"]

[project.scripts]
ham = "ham.cli:main"

[project.urls]
Homepage = "https://github.com/eventh0riz0n/ham"
Repository = "https://github.com/eventh0riz0n/ham"
Issues = "https://github.com/eventh0riz0n/ham/issues"

[tool.hatch.build.targets.wheel]
packages = ["ham"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
